# zfr

./: CMakeLists.txt  main.cpp  readme.md
conf/: qcow2.conf
src/: conf.cpp  conf.h  environment.cpp  environment.h
